manifests/rate-limit.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rate-limit
  labels:
    name: rate-limit
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  namespace: rate-limit
  labels:
    app.kubernetes.io/name: ratelimit
    app: ratelimit
spec:
  ports:
  - name: http-port
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: grpc-port
    port: 8081
    targetPort: 8081
    protocol: TCP
  - name: http-debug
    port: 6070
    targetPort: 6070
    protocol: TCP
  selector:
    app.kubernetes.io/name: ratelimit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: rate-limit
  labels:
    app.kubernetes.io/name: ratelimit
    app: ratelimit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ratelimit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ratelimit
        app: ratelimit
    spec:
      containers:
        - name: ratelimit
          image: "envoyproxy/ratelimit:38500fe5"
          imagePullPolicy: IfNotPresent
          command: ["/bin/ratelimit"]
          ports:
          - containerPort: 8080
          - containerPort: 8081
          - containerPort: 6070
          resources:
            limits:
              cpu: 1
              memory: 1024Mi
            requests:
              cpu: 1
              memory: 1024Mi
          volumeMounts:
          - name: config-volume
            mountPath: /data/ratelimit/config
      volumes:
      - name: config-volume
        configMap:
          name: ratelimit-config
