manifests/redis.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: redis
spec:
  selector:
    app: redis-server
  ports:
    - name: redis-port
      protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
  namespace: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
        name: redis-server
    spec:
      containers:
      - name: redis-server
        image: redis
        args: ["--appendonly", "yes"]
        ports:
          - name: redis-server
            containerPort: 6379
        volumeMounts:
          - name: lv-storage
            mountPath: /data
        resources:
          limits:
            cpu: 1
            memory: 1024Mi
          requests:
            cpu: 1
            memory: 1024Mi              
      volumes:
        - name: lv-storage
          persistentVolumeClaim:
            claimName: redis-pvc
