manifests/nats.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nats
  labels:
    name: nats
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nats
  namespace: nats
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nats
            port:
              number: 4222
